<resources>
    <string name="app_name">MyMemories</string>
    <string name="password">Password</string>
    <string name="login_title">Login</string>
    <string name="create_account">Create Account</string>
    <string name="post_title">Post title</string>
    <string name="post_description">Post description</string>
    <string name="submitText">Submit</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="email">Email</string>
</resources>
